	(complete_tree_nodes_menus, new_master_menu, regenerate_master_menu)
	(menu_to_simple_menu, set_menus_to_simple_menu): Move some 
	less-used functions out into a new file, Transformations.pm.

	* tp/Texinfo/Structuring.pm,
	(_new_block_command, new_block_command): Rename.
	(_new_node_menu_entry, new_node_menu_entry): Rename.
	(add_missing_menus): Remove, as it isn't used anywhere.

2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (nodes_tree): Use a hash reference
	that is inside a variable for brevity.

2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm: Rename 'ids' hash to 'seen_ids'
	and use 1 as its values instead of references to tree elements.

2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm
	(_new_sectioning_command_target): Do not set 'id' on target 
	record: only set 'target'.  Do not set 'contents_id' or
	'shortcontents_id'.
	(_prepare_special_elements): Don't call 
	Texinfo::Config::special_element_target_file_name with $id
	argument, and don't set 'id' on target record.
	(_prepare_index_entries): Don't set 'id' on target record 
	separately from 'target'.
	(_prepare_contents_element): Don't set 'id' on target records.
	Don't call Texinfo::Config::special_element_target_file_name
	with 'id' argument.
	(_get_target): Comment updated.

	(_node_id_file): Don't call Texinfo::Config::node_target_name with
	$id argument, and don't include $id in return value.
	(_set_root_commands_targets_node_files): Don't get $id from 
	return value of '_node_id_file', and don't set 'id' on target 
	records for the "root commands".

	(command_target): Check if the element has an 'associated_node',
	and if so, use it instead.
	(command_id): Use 'target' value on target record instead of 'id'.
	(command_contents_id): Remove function.
	(_default_contents): Call command_contents_target instead.
	(_element_direction): Do not accept 'id' as the $type argument.